[package]
name = "entropy"
description = "Calculates the Shannon entropy of arrays of bytes and strings"
license = "MIT"
version = "0.3.0"
repository = "https://github.com/rmbreak/entropy"
documentation = "https://docs.rs/entropy/"
authors = ["Mack Stump <mack.stump@gmail.com>"]

[[bin]]
name = "entropy"
doc = false

[dependencies]
