[package]
authors = ["Mack Stump <mack.stump@gmail.com>"]
description = "Calculates the Shannon entropy of arrays of bytes and strings"
documentation = "https://docs.rs/entropy/"
edition = "2018"
homepage = "https://github.com/rmbreak/entropy"
license = "MIT"
name = "entropy"
readme = "README.md"
repository = "https://github.com/rmbreak/entropy"
version = "0.4.1"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "shannon"
